[package]
name = "fips205"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 205 (draft): Stateless Hash-Based Digital Signature"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
repository = "https://github.com/integritychain/fips205"
rust-version = "1.73"


[dependencies]
